refactor articles-filter and tags

--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -55,7 +55,7 @@
 		{{- end -}}
 	</a>
 		{{- if .Params.Tags -}}
-			<p class="tags">{{ partial "tags-list" . }}</p>
+			<p class="taxa tags">{{ partial "tags-list" . }}</p>
 		{{- end -}}
 {{- end -}}
 </article>
