--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -76,7 +76,7 @@
 
 		{{ if .Params.Tags }}
 			<dt>{{ i18n "tags" }}</dt>
-			<dd class="tags">{{ partial "tags-list" . }}</dd>
+			<dd class="taxa tags">{{ partial "tags-list" . }}</dd>
 		{{ end }}
 		</dl>
 	</details>
