--- a/layouts/partials/tags-list.html
+++ b/layouts/partials/tags-list.html
@@ -1,4 +1,4 @@
 <!-- layouts/partials/tags-list.html -->
 {{- range .Params.Tags -}}{{ with $.Site.GetPage (printf "/%s/%s" "tags" . ) -}}
-	{{- partial "tag" . -}}
+	{{- partial "taxon" . -}}
 {{- end -}}{{- end -}}
