--- a/static/styles/screen.next.css
+++ b/static/styles/screen.next.css
@@ -51,7 +51,7 @@ global CSS variables
 	--page-blur: 2px;
 
 	/* auto-calculated colors */
-	--shadow-color: rgba(var(--text-color),0.2);
+	--shadow-color: var(--text-color),0.2;
 }
 
 
@@ -451,6 +451,10 @@ tr:hover {
 
 tr:hover td {
 	border-color: transparent;
+}
+
+thead tr:hover {
+	outline: none;
 }
 
 /*tr:last-child > td {
@@ -1905,22 +1909,6 @@ article h3 {
 
 
 /*--------------------------------------------------------------
-img gallery
---------------------------------------------------------------*/
-
-.gallery {
-	columns: calc(var(--max-content) / 4) auto;
-	column-gap: var(--baseline);
-	font-size: 0;
-}
-
-.gallery figure {
-	display: inline-flex;
-	margin: 0 0 var(--baseline) 0;
-}
-
-
-/*--------------------------------------------------------------
 image filters
 --------------------------------------------------------------*/
 
@@ -1930,7 +1918,7 @@ img.blend {
 }
 
 img.shadow {
-	box-shadow: 0 0.5rem 1rem var(--shadow-color);
+	box-shadow: 0 0.5rem 1rem rgba(var(--shadow-color));
 }
 
 
@@ -2499,14 +2487,14 @@ input[type="reset"] {
 	cursor: pointer;
 	pointer-events: auto;
 
-	box-shadow: 0px 5px 0px 0px var(--shadow-color);
+	box-shadow: 0px 5px 0px 0px rgba(var(--shadow-color));
 	-webkit-appearance: button; /* iOS and Safari fix */
 }
 
 button:hover,
 input[type="submit"]:hover,
 input[type="reset"]:hover {
-	box-shadow: inset 0 2rem 0 var(--shadow-color), 0px 3px 0px 0px var(--shadow-color);
+	box-shadow: inset 0 2rem 0 rgba(var(--shadow-color)), 0px 3px 0px 0px rgba(var(--shadow-color));
 	color: currentColor;
 	text-decoration: none;
 	/*transform: translate(0, 1px);*/
@@ -2783,11 +2771,12 @@ articles-list styles
 .articles-list article {
 	flex-basis: 100%;
 	margin: 0;
+
+	outline-offset: calc(var(--baseline) / 2);
 }
 
 .articles-list article:focus-within {
 	outline: 2px solid rgb(var(--accent-color));
-	outline-offset: calc(var(--baseline) / 2);
 }
 
 .articles-list article:focus-within > a {
@@ -2877,4 +2866,221 @@ articles-list - no-tags
 --------------------------------------------------------------*/
 .articles-list.no-tags .tags {
 	display: none;
+}
+
+/*--------------------------------------------------------------
+articles-list - no-summary
+--------------------------------------------------------------*/
+.articles-list.no-summary > .summary,
+.articles-list.no-summary > .summary:after {
+	display: none;
+}
+
+
+/*--------------------------------------------------------------
+articles-list - no-gap
+--------------------------------------------------------------*/
+.articles-list.no-gap {
+	--gutter: 0px;
+}
+
+
+/*--------------------------------------------------------------
+articles-list - no-text
+--------------------------------------------------------------*/
+
+.articles-list.no-text article .time,
+.articles-list.no-text article .title,
+.articles-list.no-text article .tags,
+.articles-list.no-text article .summary,
+.articles-list.no-text article .summary:after {
+	display: none;
+}
+
+.articles-list.no-text article .thumbnail{
+	display: block;
+}
+
+
+/*--------------------------------------------------------------
+articles-list - no-time
+--------------------------------------------------------------*/
+.articles-list.no-time article .time {
+	display: none;
+}
+
+
+
+
+
+/*--------------------------------------------------------------
+img gallery
+--------------------------------------------------------------*/
+
+/*.gallery {
+	columns: calc(var(--max-content) / 4) auto;
+	column-gap: var(--baseline);
+	font-size: 0;
+}
+
+.gallery figure {
+	display: inline-flex;
+	margin: 0 0 var(--baseline) 0;
+}*/
+
+
+/*--------------------------------------------------------------
+gallery
+--------------------------------------------------------------*/
+
+.gallery {
+	position: relative;
+	margin: var(--gutter) auto;
+
+	column-count: 2;
+	column-gap: var(--gutter);
+	counter-reset: items;
+}
+
+.gallery figure {
+	counter-increment: items;
+
+	transition: transform .3s;
+}
+
+.gallery figure:first-child {
+	z-index: 1;
+}
+
+.gallery figcaption {
+	/*transition: all .3s .3s;*/
+}
+
+.gallery img {
+	width: 100%;
+	margin: 0 auto;
+
+	cursor: pointer;
+	mix-blend-mode: normal;
+
+	transform-origin: center;
+	transition: transform .3s 1s;
+}
+
+.gallery img:hover {
+	transition-delay: 0s;
+}
+
+.gallery {
+	column-count: 2;
+	column-gap: var(--gutter);
+}
+
+.gallery.spread,
+.gallery.shuffled {
+	position: relative;
+	margin: calc(2*var(--gutter)) auto;
+	columns: initial;
+}
+
+.gallery.shuffled {
+	--gallery-height: 70vh;
+
+	height: var(--gallery-height);
+}
+
+.gallery.spread:after,
+.gallery.shuffled:after {
+	content: attr(data-current) '/' counter(items);
+	display: block;
+	position: absolute;
+	top: calc(-1.5 * var(--gutter));
+	right: 0;
+
+	font-size: var(--s-2);
+}
+
+.gallery.shuffled figure {
+	position: absolute;
+	top:  calc(0.5rem * var(--index) * var(--rand-z));
+	left: calc(0.5rem * var(--index) * var(--rand-z));
+	margin: 0;
+
+	transform-origin: top left;
+	/*transform: translate(calc(1.33rem * var(--rand-x)), calc(1.33rem * var(--rand-y))) rotate(calc(1deg * var(--rand-z)));*/
+	transition: all .3s;
+}
+
+.gallery.spread figure img,
+.gallery.shuffled figure img {
+	max-height: var(--gallery-height);
+	width: auto;
+
+	outline: 1px solid rgba(var(--text-color), 0.2);
+}
+
+.gallery.spread figure:hover img,
+.gallery.shuffled figure:hover img {
+	opacity: 0.9;
+}
+
+.gallery.spread figure.top,
+.gallery.shuffled figure.top {
+	top: -1em;
+	left: -1rem;
+
+	/*background: rgb(var(--page-color));*/
+	cursor: e-resize;
+
+	transform:  none;
+}
+
+.gallery.spread figure.top img,
+.gallery.shuffled figure.top img {
+	box-shadow: 0 4px 12px 4px rgba(var(--shadow-color));
+	opacity: 1;
+}
+
+.gallery.spread figcaption,
+.gallery.shuffled figcaption {
+	position: absolute;
+	top: calc(-1.5 * var(--gutter));
+	left: 0;
+	margin: 0;
+
+	opacity: 0;
+	/*transform: translate(calc(-1.33rem * var(--rand-x)), calc(-1.33rem * var(--rand-y))) rotate(calc(-1deg * var(--rand-z)));*/
+	transition: all .3s;
+}
+
+.gallery.spread figure.top figcaption,
+.gallery.shuffled figure.top figcaption {
+	opacity: 1;
+}
+
+.gallery.spread {
+	width: calc(100% - 10%);
+}
+
+.gallery.spread figure {
+	position: relative;
+	display: inline-block;
+	width: 30%;
+	margin-right: -10%;
+	/*transform: rotate(calc(-1deg * var(--rand-z)));*/
+	transform: rotate(2deg);
+}
+
+.gallery.spread figure:hover,
+.gallery.spread figure.top {
+	transform: scale(1.1);
+	z-index: 100;
+}
+
+.gallery.spread figcaption {
+	/*transform: rotate(calc(1deg * var(--rand-z)));*/
+}
+
+.gallery.no-caption figcaption {
+	visibility: hidden;
 }
