--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,28 +1,28 @@
 <aside class="meta">
-	{{ if .Params.series -}}
-		<details open>
-			<summary>{{ (i18n "in-series") }}</summary>
-			{{ with .Params.series }}
-				<dl>{{- range $name := . }}
-					<dt>{{ i18n . }}</dt>
-					{{- $series := index site.Taxonomies.series $name }}
-					{{- range $series.Pages.ByDate }}
-						<dd><a {{ if ne $.Permalink .Permalink }} href="{{ .Permalink }}"{{ end }}>{{ .Title }}</a></dd>
-					{{- end }}
-				{{ end }}
-			{{ end }}</dl>
-		</details>
-	{{ end }}
-	{{ if and (ne .Site.Params.show_toc false) (ne .Params.show_toc false) -}}
-		{{ if ge (len .TableOfContents) 150 }}
-		<details>
-			<summary>{{ (i18n "contents") }}</summary>
-			{{.TableOfContents}}
-		</details>
-		{{ end }}
-	{{ end }}
+{{ if and (ne .Site.Params.show_toc false) (ne .Params.show_toc false) -}}
+	{{ if ge (len .TableOfContents) 200 }}
 	<details>
-		<summary>{{ (i18n "post-details") }}</summary>
+		<summary>{{ (i18n "contents") }}</summary>
+		{{.TableOfContents}}
+	</details>
+	{{ end }}
+{{ end }}
+{{ if .Params.series -}}
+	<details open>
+		<summary>{{ (i18n "post-series") }}</summary>
+		{{ with .Params.series }}
+			<dl>{{- range $name := . }}
+				<dt>{{ i18n . }}</dt>
+				{{- $series := index site.Taxonomies.series $name }}
+				{{- range $series.Pages.ByDate }}
+					<dd><a {{ if ne $.Permalink .Permalink }} href="{{ .Permalink }}"{{ end }}>{{ .Title }}</a></dd>
+				{{- end }}
+			{{ end }}
+		{{ end }}</dl>
+	</details>
+{{ end }}
+	<details>
+		<summary>{{ (i18n "post-publication") }}</summary>
 		<dl>
 		{{ if .Lastmod }}
 			<dt>{{ i18n "modified-date" }}</dt>
@@ -56,24 +56,12 @@
 			{{ $yearsElapsed := ( sub (int (now.Format "2006")) (int (.Date.Format "2006")) ) }}
 			<dd class="time">{{ $yearsElapsed }} {{ i18n "notice-outdated" | safeHTML }}</dd>
 		{{ end }}
+		</dl>
+	</details>
 
-		{{ with .Params.DateRead }}
-			<dt>{{ i18n "read-date" }}</dt>
-				<dd>{{ . }}</dd>
-		{{ end }}
-
-		{{ with .Params.Rating }}
-			<dt>{{ i18n "rating" }}</dt>
-				<dd title="{{ . }}">
-					{{- range seq (int . ) }}★{{ end -}}
-				</dd>
-		{{ end }}
-
-		{{ with .Params.license }}
-			<dt>{{ i18n "license" }}</dt>
-			<dd>{{ . | plainify | markdownify }}</dd>
-		{{ end }}
-
+	<details>
+		<summary>{{ (i18n "post-taxonomies") }}</summary>
+		<dl>
 		{{ if .Params.Tags }}
 			<dt>{{ i18n "tags" }}</dt>
 			<dd class="taxa tags">{{ partial "tags-list" . }}</dd>
@@ -81,10 +69,30 @@
 		</dl>
 	</details>
 
-	{{- if eq .Type "review" -}}
+{{ with .Params.license }}
+	<details>
+		<summary>{{ (i18n "post-license") }}</summary>
+		<dl>
+		<dt>{{ i18n "license" }}</dt>
+			<dd>{{ . | plainify | markdownify }}</dd>
+		</dl>
+	</details>
+{{ end }}
+
+{{- if eq .Type "review" -}}
 	<details open>
 		<summary>{{ (i18n "publication-details") }}</summary>
 		<dl>
+		{{ with .Params.Rating }}
+			<dt>{{ i18n "rating" }}</dt>
+			<dd title="{{ . }}">
+				{{- range seq (int . ) }}★{{ end -}}
+			</dd>
+		{{ end }}
+		{{ with .Params.DateRead }}
+			<dt>{{ i18n "read-date" }}</dt>
+				<dd>{{ . }}</dd>
+		{{ end }}
 		{{ with .Params.Publication.Title }}
 			<dt>{{ i18n "title" }}</dt>
 			<dd>
@@ -123,25 +131,25 @@
 		{{ end -}}
 		</dl>
 	</details>
-	{{ end }}
-	{{ with .Params.Github -}}
-		{{- $stats := getJSON "https://api.github.com/repos/" . -}}
-		<details open>
-			<summary>{{ i18n "hosted-on-github" }}</summary>
-			<dl>
-				<dt>{{ i18n "github-repository" }}</dt>
-					<dd><a href="https://github.com/{{ . }}" target="_blank">{{ . }}</a></dd>
-				{{ with $stats.license }}<dt>{{ i18n "github-license" }}</dt>
-					<dd>{{ .name }}</dd>{{ end }}
-				<dt>{{ i18n "github-last-pushed" }}</dt>
-					<dd>{{ $stats.pushed_at }}</dd>
-			</dl>	
-		</details>
-	{{ end }}
-	{{ with .Params.Meta }}
+{{ end }}
+{{ with .Params.Github -}}
+	{{- $stats := getJSON "https://api.github.com/repos/" . -}}
+	<details open>
+		<summary>{{ i18n "hosted-on-github" }}</summary>
+		<dl>
+			<dt>{{ i18n "github-repository" }}</dt>
+				<dd><a href="https://github.com/{{ . }}" target="_blank">{{ . }}</a></dd>
+			{{ with $stats.license }}<dt>{{ i18n "github-license" }}</dt>
+				<dd>{{ .name }}</dd>{{ end }}
+			<dt>{{ i18n "github-last-pushed" }}</dt>
+				<dd>{{ $stats.pushed_at }}</dd>
+		</dl>	
+	</details>
+{{ end }}
+{{ with .Params.Meta }}
 	<details>
 		<summary>{{ i18n "post-meta" }}</summary>
 		{{ . | markdownify }}
 	</details>
-	{{ end }}
+{{ end }}
 </aside>
