--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,6 +6,10 @@
 <link rel="icon" type="image/png" href="{{ "/favicon.png" | relURL }}">
 {{- end }}
 
+<link rel="preload" href="../fonts/Alegreya-Regular.woff2" as="font" type="font/woff2" crossorigin/>
+<link rel="preload" href="../fonts/FantasqueSansMono-Regular.woff2" as="font" type="font/woff2" crossorigin/>
+<link rel="preload" href="../fonts/AlegreyaSans-Regular.woff2" as="font" type="font/woff2" crossorigin/>
+
 {{ $style_screen := resources.Get "/styles/screen.css" | minify | fingerprint }}
 <link rel="stylesheet" href="{{ $style_screen.RelPermalink }}" media="screen">
 <!-- load non essential style sheets, see https://timkadlec.com/remembers/2020-02-13-when-css-blocks/ -->
