--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -506,7 +506,7 @@ icon font via https://icomoon.io (Brands iconset)
 	src: url('../fonts/Alegreya-Italic.woff2') format('woff2');
 	font-weight: normal;
 	font-style: italic;
-	font-display: optional;
+	font-display: fallback;
 }
 
 @font-face {
@@ -514,7 +514,7 @@ icon font via https://icomoon.io (Brands iconset)
 	src: url('../fonts/Alegreya-Bold.woff2') format('woff2');
 	font-weight: bold;
 	font-style: normal;
-	font-display: optional;
+	font-display: fallback;
 }
 
 @font-face {
@@ -522,7 +522,7 @@ icon font via https://icomoon.io (Brands iconset)
 	src: url('../fonts/AlegreyaSans-Italic.woff2') format('woff2');
 	font-weight: normal;
 	font-style: italic;
-	font-display: optional;
+	font-display: fallback;
 }
 
 @font-face {
@@ -530,7 +530,7 @@ icon font via https://icomoon.io (Brands iconset)
 	src: url('../fonts/AlegreyaSans-Bold.woff2') format('woff2');
 	font-weight: bold;
 	font-style: normal;
-	font-display: optional;
+	font-display: fallback;
 }
 
 /*@font-face {
@@ -538,7 +538,7 @@ icon font via https://icomoon.io (Brands iconset)
 	src: url('../fonts/FantasqueSansMono-Italic.woff2') format('woff2');
 	font-weight: normal;
 	font-style: italic;
-	font-display: optional;
+	font-display: fallback;
 }*/
 
 @font-face {
@@ -546,7 +546,7 @@ icon font via https://icomoon.io (Brands iconset)
 	src: url('../fonts/FantasqueSansMono-Bold.woff2') format('woff2');
 	font-weight: bold;
 	font-style: normal;
-	font-display: optional;
+	font-display: fallback;
 }
 
 @font-face {
